Fix footer & trainers letter-spacing

--- a/components/footer/pages/style.css
+++ b/components/footer/pages/style.css
@@ -16,5 +16,4 @@
 .item {
     display: block;
     line-height: 30px;
-    letter-spacing: 0.15em;
 }
