--- a/components/index/trainers/style.css
+++ b/components/index/trainers/style.css
@@ -20,7 +20,6 @@
     line-height: 23px;
     display: flex;
     align-items: center;
-    letter-spacing: 0.1em;
     color: trainersBgText;
     margin-right: 0.4em;
 }
